--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
     <a href="mailto:joe@example.com?subject=feedback">email me</a>
   </ol>
 </nav>
-
   </header>
+
   <main>
-  A bundle of organic beets from a local farm food co-op program.
+    <figure>
+      <img src="image/beets.jpg" alt="">
+    <figcaption>
+    A bundle of organic beets from a local farm food co-op program.
+</figcaption>
+</figure>
 
-  55 to 65 days are needed from germination to harvest of the root.
-  The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+  <p>55 to 65 days are needed from germination to harvest of the root.</p>
+  <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-  In fact, Jim Halpert once said this about beets, “Fact, bears eat beets. Bears, beets, Battlestar Galactica”.
+  <p>In fact, Jim Halpert once said this about beets, “Fact, bears eat beets. Bears, beets, Battlestar Galactica”.</p>
 
-  I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
-  — Chris Pratt
+  <blockquote>
+    <p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</p>
+  <footer><<cite>— Chris Pratt</</cite></footer>
+  </blockquote>>
 
-  Common varieties
+
+  <h2>Common varieties</h2>
 
   Albino
   Bull’s Blood
@@ -40,7 +48,7 @@
   Detroit Dark Red
   Early Wonder
 
-  Nutritional information
+  <h2>Nutritional information</h2>
 
   Serving size: 100 g
 
@@ -49,8 +57,8 @@
   Fat: 0.18 g
   Protein: 1.68 g
 </<main>
-<aside class="">
-  Tags
+<aside>
+  <h2>Tags</h2>
 
 Crimson
 Awesome
@@ -62,5 +70,6 @@ Delicious
   <footer>
     Source: Wikipedia; Last modified: Aug 30, 2014
 </footer>
+
 </body>
 </html>
