--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   <blockquote>
     <p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.</p>
-  <footer><<cite>— Chris Pratt</</cite></footer>
-  </blockquote>>
+  <footer><<cite>— Chris Pratt</cite></footer>
+  </blockquote>
 
 
   <h2>Common varieties</h2>
