--- a/index.html
+++ b/index.html
@@ -41,35 +41,47 @@
 
 
   <h2>Common varieties</h2>
+<ol>
+    <li>Albino</li>Albino
+<li>Albino</li>Albino
+<li>Albino</li>Albino
+<li>Albino</li>Albino
 
-  Albino
-  Bull’s Blood
-  Chioggia
-  Detroit Dark Red
-  Early Wonder
+    Bull’s Blood
+    Chioggia
+    Detroit Dark Red
+    Early Wonder
+</ol>
 
   <h2>Nutritional information</h2>
 
-  Serving size: 100 g
+  <p>Serving size: 100 g</p>
+<dl class="">
+  <dt>Energy: </dt>
+  <dd>180 kJ</dd>
+  <dt>Carbohydrates:</dt>
+  <dd>9.96 g</dd>
+  <dt>Fat: </dt>
+  <dd>0.18 g</dd>
+  <dt><Protein: /dt>
+  <dd>1.68 g</dd>
+</dl>
 
-  Energy: 180 kJ
-  Carbohydrates: 9.96 g
-  Fat: 0.18 g
-  Protein: 1.68 g
 </<main>
 <aside>
   <h2>Tags</h2>
+<ul>
+    <li>Awesome</li>
+    <li>Pickle-able</li>
+    <li>vegetable</li>
+    <li>Delicious</li>
 
-Crimson
-Awesome
-Pickle-able
-Vegetable!
-Delicious
+</ul>
+
 </aside>
 
   <footer>
-    Source: Wikipedia; Last modified: Aug 30, 2014
-</footer>
+    <small>Source: <a href="#">https://www.Wikipedia</a>Wikipedia; Last modified: Aug 30, 2014</small>
 
 </body>
 </html>
