--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Beettroot <i>(Beta vulgaris)</i></h1>
+    <h1>Beettroot<i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
         <li><a href="#">Common varieties</a></li>
@@ -22,7 +22,7 @@
       <figcaption>A bundle of organic <b>beets</b> from a local farm food co-op program.</figcaption>
     </figure>
     <p><time> datetime="P55D">55 to 65 days</time>are needed from germination to harvest of the root.</p>
-    <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked
+    <p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked
       vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone
       or combined with any salad vegetable.</p>
       <p>In fact,<cite>Jim Halpert</cite>once said this about beets, <q>“Fact, bears eat beets. Bears,
