--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
       <img src="image/beets.jpg" alt="">
       <figcaption>A bundle of organic <b>beets</b> from a local farm food co-op program.</figcaption>
     </figure>
-    <p><time> datetime="P55D">55 to 65 days</time>are needed from germination to harvest of the root.</p>
+    <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a cooked
       vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone
       or combined with any salad vegetable.</p>
-      <p>In fact,<cite>Jim Halpert</cite>once said this about beets, <q>“Fact, bears eat beets. Bears,
-        beets, <i>Battlestar Galactica”.</i></q></p>
+    <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>Fact, bears eat beets. Bears,
+      beets, <i>Battlestar Galactica</i></q>.</p>
         <blockquote>
-          <p>I have some <em>weird </em>habits. For instance, <strong>I love beets</strong>. Show me a salad
-            bar and I will clean them out of their beets.</p>
-            <footer><cite>— Chris Pratt</cite></footer>
+    <p>I have some <em>weird </em>habits. For instance, <strong>I love beets</strong>. Show me a salad
+      bar and I will clean them out of their beets.</p>
+<footer><cite>— Chris Pratt</cite></footer>
           </blockquote>
           <h2>Common varieties</h2>
           <ol>
@@ -49,10 +49,10 @@
             <dd>9.96 g</dd>
             <dt>Fat:</dt>
             <dd>0.18 g</dd>
-            <dt><Protein:</dt>
+            <dt>Protein:</dt>
             <dd>1.68 g</dd>
           </dl>
-          </<main>
+  </<main>
             <aside>
               <h2>Tags</h2>
               <ul>
@@ -65,5 +65,6 @@
             </aside>
             <footer>
               <small>Source: <a href="#">https://www.Wikipedia</a>Wikipedia; Last modified: Aug 30, 2014</small>
-            </body>
+            </footer>
+</body>
             </html>
