--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <li>Early Wonder</li>
     </ol>
     <h2>Nutritional information</h2>
-    <p>Serving size:<datavalue="100">100g</data></p>
+    <p>Serving size:</p>
+      <data value="100">100 g</data>
     <dl>
       <dt>Energy: </dt>
       <dd>180 kJ</dd>
