--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Beettroot <i>(Beta vulgaris)</i></h1>
+    <h1>Beettroot (<i>Beta vulgaris</i>)</h1>
     <nav>
       <ol>
         <li><a href="Common-varieties">Common varieties</a></li>
