--- a/index.html
+++ b/index.html
@@ -42,14 +42,10 @@
     <h2>Nutritional information</h2>
     <p>Serving size: <data value="100">100 g</data></p>
     <dl>
-      <dt>Energy: </dt>
-      <dd>180 kJ</dd>
-      <dt>Carbohydrates:</dt>
-      <dd>9.96 g</dd>
-      <dt>Fat:</dt>
-      <dd>0.18 g</dd>
-      <dt>Protein:</dt>
-      <dd>1.68 g</dd>
+      <dt>Energy:</dt><dd<data value="180">180 kJ</data></dd>
+      <dt>Carbohydrates:</dt><dd<data value="9.96">9.96 g</data></dd>
+      <dt>Fat:</dt><dd<data value="0.18">0.18 g</data></dd>
+      <dt>Protein:</dt><dd<data value="1.68">1.68 g</data></dd>
     </dl>
   </main>
   <aside>
