--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
     <h2>Nutritional information</h2>
     <p>Serving size: <data value="100">100 g</data></p>
     <dl>
-      <dt>Energy:</dt> <dd><data value="180">180 kJ</data></dd>
-      <dt>Carbohydrates:</dt> <dd><data value="9.96">9.96 g</data></dd>
-      <dt>Fat:</dt> <dd><data value="0.18">0.18 g</data></dd>
-      <dt>Protein:</dt> <dd><data value="1.68">1.68 g</data></dd>
+      <dt>Energy:</dt>
+      <dd><data value="180">180 kJ</data></dd>
+      <dt>Carbohydrates:</dt>
+      <dd><data value="9.96">9.96 g</data></dd>
+      <dt>Fat:</dt>
+      <dd><data value="0.18">0.18 g</data></dd>
+      <dt>Protein:</dt>
+      <dd><data value="1.68">1.68 g</data></dd>
     </dl>
   </main>
 
@@ -55,7 +59,7 @@
       <li>Crimson</li>
       <li>Awesome</li>
       <li>Pickle-able</li>
-      <li>vegetable!</li>
+      <li>Vegetable!</li>
       <li>Delicious</li>
     </ul>
   </aside>
